--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="body">
         <div id="bul"></div>
         <h3 class="otp">OTP</h3>
-        <img src="../pics/my pics/df.jpeg" alt="" height="200" width="200">
+        <img src="./df.jpeg" alt="" height="200" width="200">
         <button class="c1">click here</button>
     </div>
 
